--- a/DatingApp-SPA/angular.json
+++ b/DatingApp-SPA/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/alertifyjs/build/css/alertify.min.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -82,7 +83,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
