End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "c6655447788",
+    "ApiKey": "368767487238142",
+    "ApiSecret": "fUwrZBGU7MbfvPOfOq735NcZhTE"
+  }
 }
